adding data structure

--- a/mb_a_star/mb_a_star.vcxproj
+++ b/mb_a_star/mb_a_star.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="data.cpp" />
     <ClCompile Include="mb_a_star.cpp" />
   </ItemGroup>
   <ItemGroup>
